	1308 Golden Axe:		NO INFO. Item not implemented...
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================
06/28
	* Updated Morpheus's Hood and Freyr's Shoes [Playtester]
	* Fixed the SP usage of AS_SPLASHER. Thanks to Belle. [MasterOfMuppets]
06/27
	* Added the remaining Ninja/Gunslinger drops [Playtester]
	* Raised autocast chance of Owl Duke card to Aegis x.2 [Playtester]
	* Some small item_db fixes [Playtester]
06/26
	* Mob name/sprite name update, thanks to Saycyber21 [Vicious]
	* Updated/Added some items [Playtester]
	* Corrected unit id of desperado and Ground Drift using jA's info. [Skotlex]
06/25
	* Added two new gunslinger weapon drops, thanks to RockmanEXE. [MasterOfMuppets]
06/23
	* Fixed SP Drain rates of items [Playtester]
	* Updated BD_INTOABYSS's unit flag to not affect mobs. [Skotlex]
	* Rogue Card Combo now removes Intimidate autospell [Playtester]
	* Sorted in the new cards and fixed some equips [Playtester]
06/22
	* Fixed the remaining 2006 Cards [Playtester]
	* Fixed some equipment fields that caused warnings [Playtester]
06/21
	* Fixed the equipment fields of the new cards [Playtester]
06/20
	* Reduced Stone Buckler's natural Def to 3 [Playtester]
	* Started fixing some of the cards [Playtester]
06/19
	* Some more item updates [Playtester]
	- Valkyrie Shield and Survivor's Manteau have their complete bonus script now, please test it
	- Slotted Ice Pick and Iron Shackle Combo are weaker now
	* Some updates to the item_db [Playtester]
	- updated Survivor's Manteau, Valkyrie Shield, Stone Buckler, etc.
06/18
	* Added Exp to some Thief Bug versions [Playtester]
06/17
	* Fixed the scripts for the Lotto Boxes [Playtester]